docs/0.18.1/_sources/api/gammapy.modeling.models.SuperExpCutoffPowerLaw4FGLSpectralModel.rst.txt
SuperExpCutoffPowerLaw4FGLSpectralModel
=======================================

.. currentmodule:: gammapy.modeling.models

.. autoclass:: SuperExpCutoffPowerLaw4FGLSpectralModel
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~SuperExpCutoffPowerLaw4FGLSpectralModel.amplitude
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.covariance
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.default_parameters
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.expfactor
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.index_1
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.index_2
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.is_norm_spectral_model
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.parameters
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.reference
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.tag
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.type

   .. rubric:: Methods Summary

   .. autosummary::

      ~SuperExpCutoffPowerLaw4FGLSpectralModel.__call__
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.copy
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.create
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.energy_flux
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.energy_flux_error
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.evaluate
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.evaluate_error
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.from_dict
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.from_parameters
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.integral
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.integral_error
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.inverse
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.plot
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.plot_error
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.spectral_index
      ~SuperExpCutoffPowerLaw4FGLSpectralModel.to_dict

   .. rubric:: Attributes Documentation

   .. autoattribute:: amplitude
   .. autoattribute:: covariance
   .. autoattribute:: default_parameters
   .. autoattribute:: expfactor
   .. autoattribute:: index_1
   .. autoattribute:: index_2
   .. autoattribute:: is_norm_spectral_model
   .. autoattribute:: parameters
   .. autoattribute:: reference
   .. autoattribute:: tag
   .. autoattribute:: type

   .. rubric:: Methods Documentation

   .. automethod:: __call__
   .. automethod:: copy
   .. automethod:: create
   .. automethod:: energy_flux
   .. automethod:: energy_flux_error
   .. automethod:: evaluate
   .. automethod:: evaluate_error
   .. automethod:: from_dict
   .. automethod:: from_parameters
   .. automethod:: integral
   .. automethod:: integral_error
   .. automethod:: inverse
   .. automethod:: plot
   .. automethod:: plot_error
   .. automethod:: spectral_index
   .. automethod:: to_dict
